data/forge_javadoc/1.8.9/processed/net_minecraft_client_gui_GuiPageButtonList.md
# GuiPageButtonList

## Class signature

```java
public class GuiPageButtonList extends GuiListExtended
```

## Constructors

- `public GuiPageButtonList( Minecraft mcIn, int widthIn, int heightIn, int topIn, int bottomIn, int slotHeightIn, GuiPageButtonList.GuiResponder p_i45536_7_, GuiPageButtonList.GuiListEntry []... p_i45536_8_)`

## Methods

- `public void func_181156_c(int p_181156_1_)`
- `public int func_178059_e()`
- `public int func_178057_f()`
- `public Gui func_178056_g()`
- `public void func_178071_h()`
- `public void func_178064_i()`
- `public Gui func_178061_c(int p_178061_1_)`
- `public void func_181155_a(boolean p_181155_1_)`
- `public boolean mouseClicked(int mouseX, int mouseY, int mouseEvent)`
- `public void func_178062_a(char p_178062_1_, int p_178062_2_)`
- `public GuiPageButtonList.GuiEntry getListEntry(int index)`
- `public int getSize()`
- `public int getListWidth()`
- `protected int getScrollBarX()`

## Description

Gets the IGuiListEntry object for the given index