data/forge_javadoc/1.9.4/processed/net_minecraft_client_gui_GuiPageButtonList.md
# GuiPageButtonList

## Class signature

```java
public class GuiPageButtonList extends GuiListExtended
```

## Constructors

- `public GuiPageButtonList( Minecraft mcIn, int widthIn, int heightIn, int topIn, int bottomIn, int slotHeightIn, GuiPageButtonList.GuiResponder p_i45536_7_, GuiPageButtonList.GuiListEntry []... p_i45536_8_)`

## Methods

- `public void setPage(int p_181156_1_)`
- `public int getPage()`
- `public int getPageCount()`
- `public Gui getFocusedControl()`
- `public void previousPage()`
- `public void nextPage()`
- `public Gui getComponent(int p_178061_1_)`
- `public void setActive(boolean p_181155_1_)`
- `public boolean mouseClicked(int mouseX, int mouseY, int mouseEvent)`
- `public void onKeyPressed(char p_178062_1_, int p_178062_2_)`
- `public GuiPageButtonList.GuiEntry getListEntry(int index)`
- `public int getSize()`
- `public int getListWidth()`
- `protected int getScrollBarX()`